--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Meta Virus",
+  "name": "KaClick Chrome Extension",
   "version": "1.0.0",
   "author": "MetaMysteries8 - atlbomb121510@gmail.com"
 }
